Attempt at spacing the modal correctly on Brave Android

--- a/components/ModalElement/modal-element.css
+++ b/components/ModalElement/modal-element.css
@@ -116,7 +116,7 @@ hr {
 }
 
 @media (hover: none) and (pointer: coarse) {
-  .modal-backdrop {
+  .modal-backdrop.show {
     align-items: flex-start;
     padding-top: 2rem;
   }
